<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/WorkoutName_EL_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Workout_List_Label"
        android:textSize="30sp"
        >
    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ExerName_Lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExerciseName_Item"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="0.80"/>

        <TextView
            android:id="@+id/ExerReps_Lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reps_Item"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ExerSets_Lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sets_Item"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ExerWeight_Lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Weight_Item"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/Complete_Lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NewWorkout_Confirm_Dialog"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_weight="1.01"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/WorkExerBridge_List_RecycleV"/>


</LinearLayout>
<Button
    android:id="@+id/ConfirmWO_Done_WEL"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/bottomNavigationView_WOA"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="2"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/WorkoutComplete_Dialog"
    android:textSize="20sp"
    >
</Button>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView_WOA"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu"/>


</androidx.constraintlayout.widget.ConstraintLayout>